--- a/commands/moderation/removetimeout.html
+++ b/commands/moderation/removetimeout.html
@@ -28,7 +28,7 @@
                     </ul>
                     <ul class="navbar-nav flex-fill justify-content-center">
                         <li class="nav-item">
-                            <a class="nav-link" href="/../../index/" title="Vissza a főoldalra"><img src="../../media/icon_transparent_zoomed_in.png" alt="Ikon" class="nav-icon"></a>
+                            <a class="nav-link" href="../../index.html" title="Vissza a főoldalra"><img src="../../media/icon_transparent_zoomed_in.png" alt="Ikon" class="nav-icon"></a>
                         </li>
                     </ul>
                     <ul class="navbar-nav flex-fill justify-content-end">
@@ -59,49 +59,49 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        <a href="/ban/">Ban</a>
+                                        <a href="ban.html">Ban</a>
                                     </li>
                                     <li>
-                                        <a href="/bans/">Bans</a>
+                                        <a href="bans.html">Bans</a>
                                     </li>
                                     <li>
-                                        <a href="/clear/">Clear</a>
+                                        <a href="clear.html">Clear</a>
                                     </li>
                                     <li>
-                                        <a href="/kick/">Kick</a>
+                                        <a href="kick.html">Kick</a>
                                     </li>
                                     <li>
-                                        <a href="/kicks/">Kicks</a>
+                                        <a href="kicks.html">Kicks</a>
                                     </li>
                                     <li>
-                                        <a href="/lockdown/">Lockdown</a>
+                                        <a href="lockdown.html">Lockdown</a>
                                     </li>
                                     <li>
-                                        <a href="/moderations/">Moderations</a>
+                                        <a href="moderations.html">Moderations</a>
                                     </li>
                                     <li>
-                                        <a href="/removetimeout/" class="active">Removetimeout</a>
+                                        <a href="removetimeout.html" class="active">Removetimeout</a>
                                     </li>
                                     <li>
-                                        <a href="/slowmode/">Slowmode</a>
+                                        <a href="slowmode.html">Slowmode</a>
                                     </li>
                                     <li>
-                                        <a href="/timeout/">Timeout</a>
+                                        <a href="timeout.html">Timeout</a>
                                     </li>
                                     <li>
-                                        <a href="/timeouts/">Timeouts</a>
+                                        <a href="timeouts.html">Timeouts</a>
                                     </li>
                                     <li>
-                                        <a href="/unban/">Unban</a>
+                                        <a href="unban.html">Unban</a>
                                     </li>
                                     <li>
-                                        <a href="/unlockdown/">Unlockdown</a>
+                                        <a href="unlockdown.html">Unlockdown</a>
                                     </li>
                                     <li>
-                                        <a href="/warn/">Warn</a>
+                                        <a href="warn.html">Warn</a>
                                     </li>
                                     <li>
-                                        <a href="/warns/">Warns</a>
+                                        <a href="warns.html">Warns</a>
                                     </li>
                                 </ul>
                             </div>
@@ -117,58 +117,58 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        <a href="/../music/autoplay/">Autoplay</a>
+                                        <a href="../music/autoplay.html">Autoplay</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/clearqueue/">Clearqueue</a>
+                                        <a href="../music/clearqueue.html">Clearqueue</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/filter/">Filter</a>
+                                        <a href="../music/filter.html">Filter</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/loop/">Loop</a>
+                                        <a href="../music/loop.html">Loop</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/lyrics/">Lyrics</a>
+                                        <a href="../music/lyrics.html">Lyrics</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/most/">Most</a>
+                                        <a href="../music/most.html">Most</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/pause/">Pause</a>
+                                        <a href="../music/pause.html">Pause</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/play/">Play</a>
+                                        <a href="../music/play.html">Play</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/previous/">Previous</a>
+                                        <a href="../music/previous.html">Previous</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/queue/">Queue</a>
+                                        <a href="../music/queue.html">Queue</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/remove/">Remove</a>
+                                        <a href="../music/remove.html">Remove</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/restart/">Restart</a>
+                                        <a href="../music/restart.html">Restart</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/resume/">Resume</a>
+                                        <a href="../music/resume.html">Resume</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/seek/">Seek</a>
+                                        <a href="../music/seek.html">Seek</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/shuffle/">Shuffle</a>
+                                        <a href="../music/shuffle.html">Shuffle</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/skip/">Skip</a>
+                                        <a href="../music/skip.html">Skip</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/stop/">Stop</a>
+                                        <a href="../music/stop.html">Stop</a>
                                     </li>
                                     <li>
-                                        <a href="/../music/volume/">Volume</a>
+                                        <a href="../music/volume.html">Volume</a>
                                     </li>
                                 </ul>
                             </div>
@@ -184,40 +184,40 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        <a href="/../configuration/autoroles/">Autoroles</a>
+                                        <a href="../configuration/autoroles.html">Autoroles</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/customcommand/">Customcommand</a>
+                                        <a href="../configuration/customcommand.html">Customcommand</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/djrole/">Djrole</a>
+                                        <a href="../configuration/djrole.html">Djrole</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/farewell/">Farewell</a>
+                                        <a href="../configuration/farewell.html">Farewell</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/membercounter/">Membercounter</a>
+                                        <a href="../configuration/membercounter.html">Membercounter</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/modconfig/">Modconfig</a>
+                                        <a href="../configuration/modconfig.html">Modconfig</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/permissions/">Permissions</a>
+                                        <a href="../configuration/permissions.html">Permissions</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/saveroles/">Saveroles</a>
+                                        <a href="../configuration/saveroles.html">Saveroles</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/serversettings/">Serversettings</a>
+                                        <a href="../configuration/serversettings.html">Serversettings</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/toggle/">Toggle</a>
+                                        <a href="../configuration/toggle.html">Toggle</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/welcome/">Welcome</a>
+                                        <a href="../configuration/welcome.html">Welcome</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/zenecsatorna/">Zenecsatorna</a>
+                                        <a href="../configuration/zenecsatorna.html">Zenecsatorna</a>
                                     </li>
                                 </ul>
                             </div>
@@ -233,55 +233,55 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        <a href="/../miscellaneous/8ball/">8ball</a>
+                                        <a href="../miscellaneous/8ball.html">8ball</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/ascii/">Ascii</a>
+                                        <a href="../miscellaneous/ascii.html">Ascii</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/avatár/">Avatár</a>
+                                        <a href="../miscellaneous/avatár.html">Avatár</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/coinflip/">Coinflip</a>
+                                        <a href="../miscellaneous/coinflip.html">Coinflip</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/echo/">Echo</a>
+                                        <a href="../miscellaneous/echo.html">Echo</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/emojify/">Emojify</a>
+                                        <a href="../miscellaneous/emojify.html">Emojify</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/kőpapírolló/">Kőpapírolló</a>
+                                        <a href="../miscellaneous/kőpapírolló.html">Kőpapírolló</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/miatyánk/">Miatyánk</a>
+                                        <a href="../miscellaneous/miatyánk.html">Miatyánk</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/nekosbest/">Nekosbest</a>
+                                        <a href="../miscellaneous/nekosbest.html">Nekosbest</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/nem/">Nem</a>
+                                        <a href="../miscellaneous/nem.html">Nem</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/randomszám/">Randomszám</a>
+                                        <a href="../miscellaneous/randomszám.html">Randomszám</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/replace/">Replace</a>
+                                        <a href="../miscellaneous/replace.html">Replace</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/sadstory/">Sadstory</a>
+                                        <a href="../miscellaneous/sadstory.html">Sadstory</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/serverinfo/">Serverinfo</a>
+                                        <a href="../miscellaneous/serverinfo.html">Serverinfo</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/szóharc/">Szóharc</a>
+                                        <a href="../miscellaneous/szóharc.html">Szóharc</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/szókeresés/">Szókeresés</a>
+                                        <a href="../miscellaneous/szókeresés.html">Szókeresés</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/userinfo/">Userinfo</a>
+                                        <a href="../miscellaneous/userinfo.html">Userinfo</a>
                                     </li>
                                 </ul>
                             </div>
@@ -297,19 +297,19 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        <a href="/../information/changelog/">Changelog</a>
+                                        <a href="../information/changelog.html">Changelog</a>
                                     </li>
                                     <li>
-                                        <a href="/../information/feedback/">Feedback</a>
+                                        <a href="../information/feedback.html">Feedback</a>
                                     </li>
                                     <li>
-                                        <a href="/../information/help/">Help</a>
+                                        <a href="../information/help.html">Help</a>
                                     </li>
                                     <li>
-                                        <a href="/../information/info/">Info</a>
+                                        <a href="../information/info.html">Info</a>
                                     </li>
                                     <li>
-                                        <a href="/../information/status/">Status</a>
+                                        <a href="../information/status.html">Status</a>
                                     </li>
                                 </ul>
                             </div>
