--- a/commands/music/autoplay.html
+++ b/commands/music/autoplay.html
@@ -28,7 +28,7 @@
                     </ul>
                     <ul class="navbar-nav flex-fill justify-content-center">
                         <li class="nav-item">
-                            <a class="nav-link" href="/../../index/" title="Vissza a főoldalra"><img src="../../media/icon_transparent_zoomed_in.png" alt="Ikon" class="nav-icon"></a>
+                            <a class="nav-link" href="../../index.html" title="Vissza a főoldalra"><img src="../../media/icon_transparent_zoomed_in.png" alt="Ikon" class="nav-icon"></a>
                         </li>
                     </ul>
                     <ul class="navbar-nav flex-fill justify-content-end">
@@ -59,49 +59,49 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        <a href="/../moderation/ban/">Ban</a>
+                                        <a href="../moderation/ban.html">Ban</a>
                                     </li>
                                     <li>
-                                        <a href="/../moderation/bans/">Bans</a>
+                                        <a href="../moderation/bans.html">Bans</a>
                                     </li>
                                     <li>
-                                        <a href="/../moderation/clear/">Clear</a>
+                                        <a href="../moderation/clear.html">Clear</a>
                                     </li>
                                     <li>
-                                        <a href="/../moderation/kick/">Kick</a>
+                                        <a href="../moderation/kick.html">Kick</a>
                                     </li>
                                     <li>
-                                        <a href="/../moderation/kicks/">Kicks</a>
+                                        <a href="../moderation/kicks.html">Kicks</a>
                                     </li>
                                     <li>
-                                        <a href="/../moderation/lockdown/">Lockdown</a>
+                                        <a href="../moderation/lockdown.html">Lockdown</a>
                                     </li>
                                     <li>
-                                        <a href="/../moderation/moderations/">Moderations</a>
+                                        <a href="../moderation/moderations.html">Moderations</a>
                                     </li>
                                     <li>
-                                        <a href="/../moderation/removetimeout/">Removetimeout</a>
+                                        <a href="../moderation/removetimeout.html">Removetimeout</a>
                                     </li>
                                     <li>
-                                        <a href="/../moderation/slowmode/">Slowmode</a>
+                                        <a href="../moderation/slowmode.html">Slowmode</a>
                                     </li>
                                     <li>
-                                        <a href="/../moderation/timeout/">Timeout</a>
+                                        <a href="../moderation/timeout.html">Timeout</a>
                                     </li>
                                     <li>
-                                        <a href="/../moderation/timeouts/">Timeouts</a>
+                                        <a href="../moderation/timeouts.html">Timeouts</a>
                                     </li>
                                     <li>
-                                        <a href="/../moderation/unban/">Unban</a>
+                                        <a href="../moderation/unban.html">Unban</a>
                                     </li>
                                     <li>
-                                        <a href="/../moderation/unlockdown/">Unlockdown</a>
+                                        <a href="../moderation/unlockdown.html">Unlockdown</a>
                                     </li>
                                     <li>
-                                        <a href="/../moderation/warn/">Warn</a>
+                                        <a href="../moderation/warn.html">Warn</a>
                                     </li>
                                     <li>
-                                        <a href="/../moderation/warns/">Warns</a>
+                                        <a href="../moderation/warns.html">Warns</a>
                                     </li>
                                 </ul>
                             </div>
@@ -117,58 +117,58 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        <a href="/autoplay/" class="active">Autoplay</a>
+                                        <a href="autoplay.html" class="active">Autoplay</a>
                                     </li>
                                     <li>
-                                        <a href="/clearqueue/">Clearqueue</a>
+                                        <a href="clearqueue.html">Clearqueue</a>
                                     </li>
                                     <li>
-                                        <a href="/filter/">Filter</a>
+                                        <a href="filter.html">Filter</a>
                                     </li>
                                     <li>
-                                        <a href="/loop/">Loop</a>
+                                        <a href="loop.html">Loop</a>
                                     </li>
                                     <li>
-                                        <a href="/lyrics/">Lyrics</a>
+                                        <a href="lyrics.html">Lyrics</a>
                                     </li>
                                     <li>
-                                        <a href="/most/">Most</a>
+                                        <a href="most.html">Most</a>
                                     </li>
                                     <li>
-                                        <a href="/pause/">Pause</a>
+                                        <a href="pause.html">Pause</a>
                                     </li>
                                     <li>
-                                        <a href="/play/">Play</a>
+                                        <a href="play.html">Play</a>
                                     </li>
                                     <li>
-                                        <a href="/previous/">Previous</a>
+                                        <a href="previous.html">Previous</a>
                                     </li>
                                     <li>
-                                        <a href="/queue/">Queue</a>
+                                        <a href="queue.html">Queue</a>
                                     </li>
                                     <li>
-                                        <a href="/remove/">Remove</a>
+                                        <a href="remove.html">Remove</a>
                                     </li>
                                     <li>
-                                        <a href="/restart/">Restart</a>
+                                        <a href="restart.html">Restart</a>
                                     </li>
                                     <li>
-                                        <a href="/resume/">Resume</a>
+                                        <a href="resume.html">Resume</a>
                                     </li>
                                     <li>
-                                        <a href="/seek/">Seek</a>
+                                        <a href="seek.html">Seek</a>
                                     </li>
                                     <li>
-                                        <a href="/shuffle/">Shuffle</a>
+                                        <a href="shuffle.html">Shuffle</a>
                                     </li>
                                     <li>
-                                        <a href="/skip/">Skip</a>
+                                        <a href="skip.html">Skip</a>
                                     </li>
                                     <li>
-                                        <a href="/stop/">Stop</a>
+                                        <a href="stop.html">Stop</a>
                                     </li>
                                     <li>
-                                        <a href="/volume/">Volume</a>
+                                        <a href="volume.html">Volume</a>
                                     </li>
                                 </ul>
                             </div>
@@ -184,40 +184,40 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        <a href="/../configuration/autoroles/">Autoroles</a>
+                                        <a href="../configuration/autoroles.html">Autoroles</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/customcommand/">Customcommand</a>
+                                        <a href="../configuration/customcommand.html">Customcommand</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/djrole/">Djrole</a>
+                                        <a href="../configuration/djrole.html">Djrole</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/farewell/">Farewell</a>
+                                        <a href="../configuration/farewell.html">Farewell</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/membercounter/">Membercounter</a>
+                                        <a href="../configuration/membercounter.html">Membercounter</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/modconfig/">Modconfig</a>
+                                        <a href="../configuration/modconfig.html">Modconfig</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/permissions/">Permissions</a>
+                                        <a href="../configuration/permissions.html">Permissions</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/saveroles/">Saveroles</a>
+                                        <a href="../configuration/saveroles.html">Saveroles</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/serversettings/">Serversettings</a>
+                                        <a href="../configuration/serversettings.html">Serversettings</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/toggle/">Toggle</a>
+                                        <a href="../configuration/toggle.html">Toggle</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/welcome/">Welcome</a>
+                                        <a href="../configuration/welcome.html">Welcome</a>
                                     </li>
                                     <li>
-                                        <a href="/../configuration/zenecsatorna/">Zenecsatorna</a>
+                                        <a href="../configuration/zenecsatorna.html">Zenecsatorna</a>
                                     </li>
                                 </ul>
                             </div>
@@ -233,55 +233,55 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        <a href="/../miscellaneous/8ball/">8ball</a>
+                                        <a href="../miscellaneous/8ball.html">8ball</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/ascii/">Ascii</a>
+                                        <a href="../miscellaneous/ascii.html">Ascii</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/avatár/">Avatár</a>
+                                        <a href="../miscellaneous/avatár.html">Avatár</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/coinflip/">Coinflip</a>
+                                        <a href="../miscellaneous/coinflip.html">Coinflip</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/echo/">Echo</a>
+                                        <a href="../miscellaneous/echo.html">Echo</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/emojify/">Emojify</a>
+                                        <a href="../miscellaneous/emojify.html">Emojify</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/kőpapírolló/">Kőpapírolló</a>
+                                        <a href="../miscellaneous/kőpapírolló.html">Kőpapírolló</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/miatyánk/">Miatyánk</a>
+                                        <a href="../miscellaneous/miatyánk.html">Miatyánk</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/nekosbest/">Nekosbest</a>
+                                        <a href="../miscellaneous/nekosbest.html">Nekosbest</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/nem/">Nem</a>
+                                        <a href="../miscellaneous/nem.html">Nem</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/randomszám/">Randomszám</a>
+                                        <a href="../miscellaneous/randomszám.html">Randomszám</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/replace/">Replace</a>
+                                        <a href="../miscellaneous/replace.html">Replace</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/sadstory/">Sadstory</a>
+                                        <a href="../miscellaneous/sadstory.html">Sadstory</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/serverinfo/">Serverinfo</a>
+                                        <a href="../miscellaneous/serverinfo.html">Serverinfo</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/szóharc/">Szóharc</a>
+                                        <a href="../miscellaneous/szóharc.html">Szóharc</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/szókeresés/">Szókeresés</a>
+                                        <a href="../miscellaneous/szókeresés.html">Szókeresés</a>
                                     </li>
                                     <li>
-                                        <a href="/../miscellaneous/userinfo/">Userinfo</a>
+                                        <a href="../miscellaneous/userinfo.html">Userinfo</a>
                                     </li>
                                 </ul>
                             </div>
@@ -297,19 +297,19 @@
                             <div class="accordion-body">
                                 <ul>
                                     <li>
-                                        <a href="/../information/changelog/">Changelog</a>
+                                        <a href="../information/changelog.html">Changelog</a>
                                     </li>
                                     <li>
-                                        <a href="/../information/feedback/">Feedback</a>
+                                        <a href="../information/feedback.html">Feedback</a>
                                     </li>
                                     <li>
-                                        <a href="/../information/help/">Help</a>
+                                        <a href="../information/help.html">Help</a>
                                     </li>
                                     <li>
-                                        <a href="/../information/info/">Info</a>
+                                        <a href="../information/info.html">Info</a>
                                     </li>
                                     <li>
-                                        <a href="/../information/status/">Status</a>
+                                        <a href="../information/status.html">Status</a>
                                     </li>
                                 </ul>
                             </div>
