--- a/commands/configuration/toggle.html
+++ b/commands/configuration/toggle.html
@@ -336,11 +336,19 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col-10 col-sm-10 col-md-8 col-lg-7 col-xl-5 mb-4 py-4 tabcontent command-info anim">
-                    <h3 class="command">Paraméterek</h3>
+                    <h3 class="command">Alparancsok</h3>
                     <hr>
                     <ul>
-                        <li>
-                            <p class="param"><code class="optional">parancs</code>: Parancs neve, amit ki- vagy be akarsz kapcsolni (üres: kikapcsolt parancsok kilistázása)</p>
+                        <li class="subcommand">
+                            <p class="param"><b>Átállítás</b>: sasOS parancsok ki- vagy bekapcsolása</p>
+                            <ul>
+                                <li>
+                                    <p class="param"><code>parancs</code>: Parancs neve, amit ki- vagy be akarsz kapcsolni | <b>Kötelező</b></p>
+                                </li>
+                            </ul>
+                        </li>
+                        <li class="subcommand">
+                            <p class="param"><b>Kikapcsoltak</b>: Kikapcsolt parancsok megjelenítése</p>
                         </li>
                     </ul>
                 </div>
